add some lib setup