@@ -1,25 +1,7 @@
 import org.jetbrains.compose.desktop.application.dsl.TargetFormat
-import org.jetbrains.compose.reload.gradle.ComposeHotRun
 
 plugins {
-    alias(libs.plugins.kotlin.jvm)
-    alias(libs.plugins.compose.multiplatform)
-    alias(libs.plugins.compose.compiler)
-    alias(libs.plugins.compose.hot.reload)
-}
-
-tasks.withType<ComposeHotRun>().configureEach {
-    jvmArgs("--enable-native-access=ALL-UNNAMED")
-}
-
-tasks.withType<JavaExec>().configureEach {
-    jvmArgs("--enable-native-access=ALL-UNNAMED")
-}
-
-dependencies {
-    implementation(compose.desktop.currentOs)
-    implementation(libs.logback.classic)
-    implementation(libs.diva.shared.ui)
+    id("divabuild.app-desktop")
 }
 
 compose {
@@ -30,7 +12,7 @@ compose {
             nativeDistributions {
                 targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
                 packageName = "com.diva.app"
-                packageVersion = libs.versions.app.version.name.get()
+                packageVersion = libs.versions.diva.app.name.get()
             }
         }
     }
